rabbit publish and consumer test api added
